ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress
  namespace: argo-cd
  annotations:
    nginx.ingress.kubernetes.io/app-root: /argo-cd

spec:
  ingressClassName: nginx
  rules:
    - host: worker2.calvarado04.com
      http:
        paths:
          - path: /argo-cd
            pathType: Prefix
            backend:
              service:
                name: argo-cd-1649682985-server
                port: 
                  number: 80
