ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/app-root: /jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-asus.calvarado04.com
      http:
        paths:
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins-1651943084
                port: 
                  number: 8080
